@@ -21,6 +21,7 @@
     <modules>
         <module>javaclaw-core</module>
         <module>javaclaw-channel-api</module>
+        <module>javaclaw-memory</module>
         <module>javaclaw-agent</module>
         <module>javaclaw-gateway</module>
     </modules>
@@ -68,6 +69,11 @@
             </dependency>
             <dependency>
                 <groupId>com.atm</groupId>
+                <artifactId>javaclaw-memory</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.atm</groupId>
                 <artifactId>javaclaw-agent</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -100,4 +106,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
